--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         </div>
         <canvas id="graphCanvas"></canvas>
         <div class="zoom-controls">
-            <button id="zoomInButton">Zoom In (放大)</button>
-            <button id="zoomOutButton">Zoom Out (縮小)</button>
-        </div>
+                <button id="zoomInButton">Zoom In (放大)</button>
+                <button id="zoomOutButton">Zoom Out (縮小)</button>
+                <button id="resetButton">Reset (復位)</button>
+            </div>
         <div class="coordinates-display">Mouse Coordinates: (x, y) (滑鼠座標: (x, y))</div>
     </div>
     <script src="./script.js"></script>
